# AI-workspace

./: .env.example  .gitignore  .pylintrc  0.1.0  CONTRIBUTING.md  DIRECT_MESSAGING_IMPLEMENTATION.md  DM_IMPLEMENTATION_SUMMARY.md  DM_QUICK_START.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  Makefile  Procfile  REACTION_FIX_SUMMARY.md  README.md  backend_troubleshooting.md.resolved  docker-compose.yml  pyproject.toml  pyproject.toml.backup  pyproject.toml.bak  pyproject.toml.old  seed_ai_bots.py  test_output.txt  test_service_output.txt
.github/workflows/: ci.yaml
alembic/: README.md  env.py
alembic/versions/: 1c7345284f00_clear_old_web_push_subscriptions.py  3030c40d141d_add_topic_message_attachments_table.py  3356464281d5_add_direct_messaging_system.py  3d35f70cf39b_add_online_status_and_push_subs.py  4166023639f2_initial_schema_with_all_tables.py  51f1ed742008_make_chat_message_sender_id_nullable.py  5cb1ba177b6f_add_is_approved_field_to_users.py  6ac44120e7b8_make_topic_message_sender_id_nullable.py  7a358eb65b44_remove_vapid_fields_from_push_.py  ad5888aad145_merge_chat_and_admin_branches.py  add_channels_topics_system.py  add_chat_tables.py  d949d1629252_make_hashed_password_nullable_for_oauth.py  seed_initial_admin.py
app/: db.py  main.py
app/api/: __init__.py
app/api/routes/: admin_routes.py  agent.py  ai.py  api.py  auth.py  auth_custom.py  channel_routes.py  channels.py  chat.py  conversations.py  direct_message_routes.py  gmail.py  notification_routes.py  reaction_routes.py  search.py  topic_message_routes.py  topic_routes.py  users_complete.py
app/core/: agent_config.py  ai_bots.py  auth.py  config.py  events.py  permissions.py  security.py
app/models/: __init__.py  ai_action.py  audit.py  channel.py  chat.py  conversation.py  direct_message.py  gmail.py  log.py  memory.py  message.py  user.py  web_search.py
app/schemas/: channel.py  chat.py  conversation.py  direct_message.py  token.py  user.py
app/services/: direct_message_service.py  fcm_service.py  memory_service.py  notification_service.py  redis_client.py  redis_persona.py  socketio_service.py
app/services/auth/: __init__.py  google_oauth.py
app/services/channel/: __init__.py  channel_service.py
app/services/chat/: __init__.py  agent_factory.py  agent_service.py  chat_service.py  conversation_service.py
app/services/integrations/: __init__.py  composio_service.py  supabase_service.py
app/services/topic/: __init__.py  topic_management_service.py  topic_member_service.py  topic_message_service.py  topic_reaction_service.py  topic_service.py
app/utils/: ai_agent_parser.py
docs/: AI_AGENT_MENTIONS.md  AI_BOT_USERS_GUIDE.md  AI_EMAIL_ASYNC_GUIDE.md  DIRECT_MESSAGING_IMPLEMENTATION.md  DM_API_REFERENCE.md  DM_IMPLEMENTATION_SUMMARY.md  DM_QUICK_START.md  FRONTEND_HANDOFF.md  FRONTEND_IMPLEMENTATION_GUIDE.md  MOVE_APP_DB.md  NOTIFICATIONS_IMPLEMENTATION_SUMMARY.md  QUICK_SETUP_GUIDE.md  REACTION_FIX_SUMMARY.md  README.md  SOCKET_REST_API_CONSISTENCY.md
docs/architecture/: ARCHITECTURE_DIAGRAM.md
docs/features/: CHAT_FEATURE_README.md  EMOJI_REACTIONS_GUIDE.md  MENTIONS_GUIDE.md
docs/guides/: CHAT_SETUP_GUIDE.md  OAUTH_SETUP_GUIDE.md  QUICK_START_CHANNELS.md  SOCKETIO_CLIENT_GUIDE.md
docs/operations/: ADMIN_SEEDING_GUIDE.md  TOPIC_MEMBER_MANAGEMENT_GUIDE.md
scripts/: README.md  generate_vapid_keys.py
scripts/manual_tests/: test_chat_feature.py  test_gmail.py  test_search.py  verify_search_endpoints.py
scripts/seeds/: seed_admin.py  seed_admin.sql
tests/: __init__.py  test_ai_agent_parser.py  test_auth_users.py  test_config_and_errors.py  test_events_and_main.py  test_pagination_behavior.py  test_predictor.py  test_reaction_logic.py  test_reaction_service.py  test_request_logging.py
