[tool.poetry]
name = "armada-den"
version = "0.1.0"
description = "Armada Den is an internal AI workspace built to enhance productivity, research, and communication within Hire Armada. It unifies AI chat, real-time knowledge access, and Gmail-based communication into one secure workspace, purpose-built for internal operations and client correspondence."
authors = ["Natnael Alemseged <natiaabaydam@gmail.com>"]
package-mode = false  # Allows root-level code without packaging

[tool.poetry.dependencies]
python = "^3.12"  # Matches your requires-python; supports fastapi-users 15.0.1
fastapi = ">=0.103.0"
fastapi-users = {version = ">=15.0.1,<16.0.0", extras = ["sqlalchemy"]}
uvicorn = "==0.23.2"
pydantic = ">=2.0.0"
requests = ">=2.32.0"
loguru = ">=0.7.0"
joblib = ">=1.2.0"
scikit-learn = ">=1.1.3"
pandas = ">=2.2.3"
httpx = ">=0.27.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
psycopg2-binary = ">=2.9.0"
alembic = ">=1.13.0"

# Pinned Composio to 0.7.x (fixes none_to_omit ImportError; compatible with agno 0.7.20)
composio = "0.9.2"
composio-openai = "==0.9.1"
composio-agno = "==0.7.20"
composio-llamaindex = "==0.9.1"
# Let Poetry pull composio-core >=0.7.0,<0.8.0 automatically (required by agno)

llama-index = ">=0.10.0"
llama-index-llms-openai-like = ">=0.1.0"
llama-index-llms-groq = ">=0.1.0"
llama-index-core = ">=0.10.0"
openai = ">=1.0.0"
groq = ">=0.4.0"
agno = ">=0.1.0"
aiosqlite = ">=0.19.0"
authlib = ">=1.3.0"
python-jose = {version = ">=3.3.0", extras = ["cryptography"]}
passlib = {version = ">=1.7.4", extras = ["argon2"]}
python-socketio = {extras = ["asyncio-client"], version = "^5.14.3"}
supabase = ">=2.3.0"
python-multipart = ">=0.0.6"
python-dotenv = ">=1.0.0"
supermemory = ">=0.2.0"
starlette = ">=0.27.0"
asyncpg = "^0.30.0"
itsdangerous = "^2.2.0"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2"
black = ">=24.3"
autopep8 = ">=2.0.0"
ipdb = ">=0.13.0"
pylint = ">=3.0.0"

[tool.poetry.group.aws.dependencies]
mangum = ">=0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"  # Poetry's build backend (replaces setuptools for Poetry)

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''
